add categoryItem
